add reverse proxy

--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
+            "proxyConfig": "proxy.conf.json",
             "allowedHosts": [
               ".loca.lt",
               ".ngrok-free.dev"
